[tool.poetry]
name = "fastapiproxyserver"
version = "0.1.0"
description = ""
authors = ["denistred <denislylov2004@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
fastapi = {extras = ["sqlalchemy"], version = "^0.109.2"}
uvicorn = "^0.27.0.post1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
sqlmodel = "^0.0.16"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
